[package]
name = "todo"
version = "0.1.0"
description = "a todo manager"
authors = ["Daniel da Silva <daniel@doetdingen.nl>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
